--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -10,6 +10,7 @@ body {
 
 .flexbox {
     display: flex;
+    flex-wrap: wrap;
     /* justify-content: space-around; */
 
     width: 100%;
@@ -45,4 +46,28 @@ body {
 
     cursor: pointer;
     margin-bottom: 15px;
+}
+
+.flexbox .tableHolder .token {
+    padding: 15px 25px;
+    color: #f3f3f3;
+    background-color: #313131;
+    width: 100%;
+    max-width: 100px;
+    height: 100%;
+    max-height: 100px;
+    margin: 5px;
+
+    cursor: pointer;
+    margin-bottom: 15px;
+}
+
+.tableHolder {
+    display: flex;
+    flex-basis: 100%;
+    width: 100%;
+
+    border: 5px solid #313131;
+
+    padding: 15px;
 }
